[gd_scene load_steps=7 format=3 uid="uid://bdyb6binynh7p"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_gp6ma"]
[ext_resource type="PackedScene" uid="uid://d0cf3gtvxikje" path="res://characters/player/cat.tscn" id="2_1h4ud"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jg41b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5trc3"]
radius = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4aw35"]
bg_color = Color(0.360784, 0.360784, 0.360784, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l3f3"]
bg_color = Color(0.756863, 0.54902, 0.415686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_gp6ma")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Cat" parent="." instance=ExtResource("2_1h4ud")]
position = Vector2(-2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-3, -15)
rotation = 1.5708
scale = Vector2(-1.76724, 2.36709)
shape = SubResource("CircleShape2D_jg41b")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -200
limit_top = -200
limit_right = 1800
limit_bottom = 1200
editor_draw_limits = true

[node name="PlayerHitbox" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(-3, -16)
shape = SubResource("CircleShape2D_5trc3")
debug_color = Color(0.835294, 0.317647, 0.584314, 0.419608)

[node name="DealAttackTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -38.0
offset_top = -73.0
offset_right = 38.0
offset_bottom = -46.0
theme_override_styles/background = SubResource("StyleBoxFlat_4aw35")
theme_override_styles/fill = SubResource("StyleBoxFlat_6l3f3")
step = 5.0
value = 100.0
show_percentage = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 1676.0
offset_top = 8.0
offset_right = 2053.0
offset_bottom = 145.0
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="DealAttackTimer" to="." method="_on_deal_attack_timer_timeout"]
